Actions
Bug #12413
closedcxgbe: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../../common/io/cxgbe/t4nex/t4_ioctl.c: In function 'get_cudbg': ../../../common/io/cxgbe/t4nex/t4_ioctl.c:1709:17: error: cast between incompatible function types from 'void (*)(struct __dev_info **, int, char *, ...)' to 'int (*)(struct __dev_info **, ...)' [-Werror=cast-function-type] 1709 | cudbg->print = (cudbg_print_cb)cxgb_printf; | ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 41378e7950fe857e6299f2a5c2a2bc285627f816
commit 41378e7950fe857e6299f2a5c2a2bc285627f816 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-06T15:01:48.000Z 12413 cxgbe: cast between incompatible function types Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions