usr/src/uts/common/io/cxgbe/t4nex/t4_ioctl.c
@@ -1706,7 +1706,7 @@ get_cudbg(struct adapter *sc, void *data, int flags)
 
 	cudbg = cudbg_get_init(handle);
 	cudbg->adap = sc;
-	cudbg->print = (cudbg_print_cb)cxgb_printf;
+	cudbg->print = cxgb_printf;
 
 	memcpy(cudbg->dbg_bitmap, dump.bitmap, sizeof(cudbg->dbg_bitmap));
 
